--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.2",
     "msw": "^0.28.2",
     "mutationobserver-shim": "^0.3.7",
     "react": "^17.0.2",
@@ -44,5 +45,8 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "devDependencies": {
+    "webfonts-generator": "^0.4.0"
   }
 }
